--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 <section class="meta">
 <hr/>
 <span class="author">
-  <a href="http://blog.sevenche.com">{{ site.author }}</a> - 程序员，7年工作经验集中在Java, Android, C++，现就职于上海Avaya Emerging Product and Technology部门。
+  <a href="http://www.uyicu.com">{{ site.author }}</a> - 程序员，5年工作经验集中在Java, C#，现就职于京东 广告部。
 </span>
 <br />
 <span class="license">
