--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
     <footer>
         <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> | Free hosted at <a href="https://github.com/dashjim">Github</a> | Copyright 2014 - {{site.time | date:"%Y"}} by 
 		<!-- *** Please Keep bellow link for at least 6 months! Thanks！*** -->
-		<a href="http://blog.sevenche.com/about/">Template Maintained by Jim</a>
+		<a href="http://www.uyicu.com/about/">likunran</a>
 		
 		| <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S %Z"}}</span></small></p>
     </footer>
