--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -125,4 +125,4 @@ $(function() {
 	})();
 });
 </script>
-
+<script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/button.js#uuid=&amp;style=5&amp;fs=4&amp;bgcolor=Green&amp;pophcol=1"></script>
