--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 		<title>{{ page.title }}</title>
 		<link rel="stylesheet" href="/css/main.css" />
 		<link rel="stylesheet" href="/css/pygments_native.css" />
-		<link rel="stylesheet" href="http://useso.com/css?family=Handlee">
+		<link rel="stylesheet" href="http://http://fonts.useso.com/css?family=Handlee">
 	</head>
 	<body>
 		<header id="header">
