--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,6 +18,9 @@ layout: default
 	<div>
 		<h3>链接</h3>
 		<ul>
+		   <li>
+                   <a href="http://www.izhangheng.com/">张衡HENRY</a>
+                   </li>
 		</ul>
 	</div>
 </aside>
