--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta property="qc:admins" content="41700203445616727" />
-		<meta property="wb:webmaster" content="ffa62a7d8c5f3b11" />
-		<title>{{ page.title }}</title>
+		
+                 <title>{{ page.title }}</title>
+                 <meta content="嘴哥的博客" name="description">
+                <meta content="storm  嘴哥 李坤然 likunran li kunran java mysql 博客 jd李坤然 广告 dsp ssp 精准通" name="keywords">
 		<link rel="stylesheet" href="/css/main.css" />
 		<link rel="stylesheet" href="/css/pygments_native.css" />
 		<link rel="stylesheet" href="http://fonts.useso.com/css?family=Handlee">
+<link rel="Shortcut Icon" href="http://www.uyicu.com/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<header id="header">
