--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 	<body>
 		<header id="header">
 			<div class="header-info fix">
-				<h1><a href="/">Hanhao bird</a></h1>
+				<h1><a href="/">KunranLi</a></h1>
 				<p class="describe">&lt;嘴哥  /&gt;</p>
 				<nav class="navigation">
 					<ul>
