--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,41 +34,24 @@ layout: default
 	<hr />
 </article>
 
-
-<!--Disqus begin-->
-<div id="comment">
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'likunran'; // required: replace example with your forum shortname
-
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
-</div>
-<!--Disqus end-->
+<div class="ds-thread" data-thread-key="{{ page.urlId }}" data-title="{{ page.title }}" data-url="www.uyicu.com{{ page.url }}"></div>
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"likunran"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
 
 <script src="/js/jquery-min.js"></script>
 <script src="/js/Fullscreen.js"></script>
 <script type="text/javascript">
 $(function() {
 	var global = window;
-
-	// ============== Disqus 定义 ==============
-	(function() {
-		global.disqus_shortname = 'likunran';
-		$('<script type="text/javascript" async ' +
-		  'src="http://' + global.disqus_shortname + '.disqus.com/embed.js">' +
-		  '<\/script>').appendTo('head');
-	})();
-
 
 	// =============== 全屏显示 ==================
 	(function() {
