--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,11 +19,14 @@ layout: default
 		<h3>链接</h3>
 		<ul>
 		   <li>
-                   <a href="http://www.izhangheng.com/">张衡HENRY</a>
+                   <a href="http://www.izhangheng.com/" target="_blank" >张衡HENRY</a>
                   </li>
                   <li>
-		  <a href="http://www.uniorder.com/">秋水</a>	
+		  <a href="http://www.uniorder.com/" target="_blank" >秋水</a>	
                    </li>
+                  <li>
+                  <a href="http://www.xten.com" target="_blank" >xten</a>
+                  </li>
 		</ul>
 	</div>
 </aside>
