--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 		
                  <title>{{ page.title }}</title>
                  <meta content="嘴哥的博客" name="description">
-                <meta content="storm  嘴哥 李坤然 likunran li kunran java mysql 博客 jd李坤然 广告 dsp ssp 精准通" name="keywords">
+                <meta content="storm 青头白菜 嘴哥 李坤然 likunran li kunran java mysql 博客 jd李坤然 广告 dsp ssp 精准通" name="keywords">
 		<link rel="stylesheet" href="/css/main.css" />
 		<link rel="stylesheet" href="/css/pygments_native.css" />
 		<link rel="stylesheet" href="http://fonts.useso.com/css?family=Handlee">
@@ -15,7 +15,7 @@
 		<header id="header">
 			<div class="header-info fix">
 				<h1><a href="/">KunranLi</a></h1>
-				<p class="describe">&lt;嘴哥  /&gt;</p>
+				<p class="describe">&lt;青头白菜  /&gt;</p>
 				<nav class="navigation">
 					<ul>
 						<li><a href="/">首页</a></li>
@@ -33,7 +33,7 @@
 
 		<footer id="footer">
 			<p class="l">
-				&copy;2014 <a href="/">Hanhao bird</a>
+				&copy;2014 <a href="/">青头白菜</a>
 				&emsp;&emsp;&emsp;
 				<a href="mailto:likunran@gmail.com" target="_blank">Email me</a>
 				<span class="c9">|</span>
