--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
 	<body>
 		<header id="header">
 			<div class="header-info fix">
-				<h1><a href="/">KunranLi</a></h1>
-				<p class="describe">&lt;青头白菜  /&gt;</p>
+				<h1><a href="/">青头白菜</a></h1>
+				<p class="describe">&lt;嘴哥  /&gt;</p>
 				<nav class="navigation">
 					<ul>
 						<li><a href="/">首页</a></li>
